[package]
name = "ppgw"
version = "0.1.0"
authors = ["howe1110 <tx1000cn@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "^1.3.0"
bitflags = "1.0"
bit_field = "0.9.0"
sha2 = "^0.5.2"
time = "^0.1.37"
rand = "0.5.5"
serde = { version = "^1.0.63", features = ["derive"] }
bincode = "1.3.1"
timer = "0.2.0"
chrono="^0.4"
